feat: Multilingual AI Assistant upgrade
- Add TANGLISH, HINGLISH, AUTO language detection
- Upgrade AiAssistantService with live MySQL context
- Add 50+ regional product aliases in all languages
- Implement action execution from voice/chat
- Business logic: credit risk warnings, smart responses
- Fix voice controller conflict, remove old endpoint
- Update i18n with Tanglish/Hinglish translations
- Add comprehensive upgrade documentation

BREAKING CHANGES:
- Language enum now has 9 values (added TANGLISH, HINGLISH, AUTO)
- AiDtos.ChatRequest now includes customers and products arrays
- SpeechIntelligenceService.logToDb signature updated (4 params)

Fixes: #1 multilingual support
Fixes: #2 live data integration
Fixes: #3 action execution